Added readme file

--- a/transactions/templates/add_expense.html
+++ b/transactions/templates/add_expense.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Add Income{% endblock %}
+{% block title %}Add Expense{% endblock %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/add_income.css' %}">
